[package]
name = "token-counter"
version = "0.1.0"
edition = "2021"

[dependencies]
tiktoken-rs = "0.6"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls", "json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
